<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/red_dark"
    android:padding="@dimen/xsmall_spacing"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_spacing"
        android:text="@string/clear_history_dialog_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_spacing"
        android:text="@string/clear_history_dialog_message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clear_history_dialog_neg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history_dialog_neg_button"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clear_history_dialog_pos_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history_dialog_pos_button"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

</LinearLayout>